# trading-agent-01

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
backtesting/data/: __init__.py  base.py  crypto.py  equity.py  loader.py
backtesting/engine/: __init__.py  params.py  runner.py
backtesting/metrics/: calculator.py
backtesting/reports/: exporter.py
backtesting/strategies/: __init__.py  base.py  buy_and_hold.py  ha_reversal.py  ha_sma.py  ha_sma_dca.py  renko_sma.py  renko_sma_dca.py  sma_crossover.py
backtesting/ui/: cli.py  dashboard.py
tests/: test_data.py  test_engine.py  test_strategies.py
