[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "backtesting-trading"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
bt = "backtesting.ui.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["backtesting*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
